test/ScannerAndParserTests/fail/Fail3.java
class AssignmentDescription {
	// Fields do not have an initializing expression in their declaration
	//
	public int a;
	public static int b;
	public boolean c;
	public static boolean c;

	private int a;
	private static int b;
	private boolean c;
	private static boolean c;
	public int getName {

	}
/**////
/*
	public int[] d;
	public static int[] d;
*///;public
//test
/*te*/
	// Does int CLASS; work?
	public/*hey whhats up*/int[] d;
	public static int[] d;
	public HelloWorld ea;
	public static HelloWorld eb;
	public Helloword[] ec;
	//public statc HelloWorld[] ed;
}
class HelloWorld {
    //public static void main(String[] args) {
        //System.out.println(45 || 4 && 7); 
		//w++;
    //}
	//public int 34a;
}
/*
&&
||
<=
!
55<4
*/
